<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/balanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/txtOwnName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20.00"
            android:textSize="60sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtOwnName"  />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer_amount"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTransfer" />

            <LinearLayout
                android:id="@+id/firstEuroEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAmount" >

                <TextView
                    android:id="@+id/txt5Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="5€:"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/number_picker_5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    numberpicker:min="0"
                    numberpicker:max="10"
                    numberpicker:value="5"
                    numberpicker:unit="1"
                    numberpicker:focusable="false"
                    numberpicker:custom_layout = "@layout/number_picker_layout"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondEuroEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstEuroEdit" >

                <TextView
                    android:id="@+id/txt2Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="2€:"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/number_picker_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    numberpicker:min="0"
                    numberpicker:max="10"
                    numberpicker:value="5"
                    numberpicker:unit="1"
                    numberpicker:focusable="false"
                    numberpicker:custom_layout = "@layout/number_picker_layout"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/thirdEuroEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondEuroEdit" >

                <TextView
                    android:id="@+id/txt1Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="1€:"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/number_picker_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    numberpicker:min="0"
                    numberpicker:max="10"
                    numberpicker:value="5"
                    numberpicker:unit="1"
                    numberpicker:focusable="false"
                    numberpicker:custom_layout = "@layout/number_picker_layout"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thirdEuroEdit"
                >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/send"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:text="@string/cancel" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtReceiverInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintTop_toBottomOf="@id/buttonLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>

